<resources>
    <string name="app_name">Bumble</string>
    <string name="text_header">What </string>
    <string name="Whats_your_number">"What's your number?"</string>
    <string name="text_real">We protect our community by making sure everyone on Bumble is real</string>
    <string name="text_lock">"We never share this with anyone and it won't be on your profile"</string>
    <string name="in_91">IN +91</string>
    <string name="phone_number">Phone number</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="use_cell_phone_number">Use cell phone number</string>
    <string name="don_t_worry_we_never_post_to_facebook">"Don't worry! We never post to Facebook"</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="enter_the_code_we_ve_sent_by_text_to">enter the code we ve sent by text to</string>
    <string name="_919857341321">919857341321</string>
    <string name="change">. <u>change</u></string>
    <string name="didn_t_get_a_text"><u>"Didn't get a text?"</u></string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="can_clearly_see_your_face_you_can">can clearly see your face. You can</string>
    <string name="choose_a_photo_of_just_you_where_you">Choose a photo of just you where you</string>
    <string name="add_your_first">Add your first photo</string>
    <string name="photo">photo</string>
    <string name="add_from_facebook">Add from facebook</string>
    <string name="text_identification">How do you identify?</string>
    <string name="everyone_s_welcome_on_bumble">"Everyone's welcome on Bumble!"</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="non_binary">Non-binary</string>
    <string name="more_gender_options">More gender options</string>
    <string name="what_s_your_email_address">"What&amp;s your email address?"</string>
    <string name="recoverymail">"We use this to recover your account if you can't login."</string>
    <string name="firstmove">Women make the first move</string>
    <string name="sendamessage">When you match with someone,you have to send a message first</string>
    <string name="women_make_the_first">Women make the first</string>
    <string name="move">move</string>
    <string name="matchwithsomeone">When you match with someone ,you have</string>
    <string name="to_send_a_message">to send a message first.</string>
    <string name="got_it">Got it</string>
    <string name="_24_hours_to_connect">24 hours to connect</string>
    <string name="matches">Matches expire after 24 hours if first</string>
    <string name="messages_aren_t_exchanged">"messages aren't exchanged"</string>
    <string name="not_sure_waht_to_upload">Not sure what to upload?</string>
    <string name="check_out_our_guidelines"><u>Check out our guidelines</u></string>
    <string name="what_s_your_first">"What's your first"</string>
    <string name="you_wont_t_able_to_change_this_later">"You wont't able to change this later"</string>
    <string name="this_will_shown_on_your_profile">This will shown on your profile</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="when_your">"When's your"</string>
    <string name="we_only_show_your_to_potential_matches">"We only show your to potential matches,\n not your birthday"</string>
    <string name="what_s_your_email">"What's your email"</string>
    <string name="address">address?</string>
    <string name="we_use_this_to_recover_your_account_if_you">We use this to recover your account if you</string>
    <string name="can_t_log_in">can &amp;t log in.</string>
    <string name="add_recovery_mail">Add recovery mail</string>
    <string name="skip"><u>Skip</u></string>
    <string name="choose_a_mode_to_get_started">Choose a mode to get</string>
    <string name="started2ndline">started</string>
    <string name="bumble_s_for_making_all_kinds_of_connections_your_ll_be_able_to_switch_modes_once_you_re_all_set_up">"Bumble's for making all kinds of connections! Your'll be able to switch modes once you're all set up."</string>
    <string name="date_find_that_in_an_empowered_community">Date Find that in an empowered community</string>
    <string name="continue_from_facebook">Continue from facebook</string>
    <string name="date">Date</string>
    <string name="BFF">BFF</string>
    <string name="make_new_friends_at_every_stage_of_your_life">Make new friends at every stage of your life</string>
    <string name="bizz">Bizz</string>
    <string name="move_your_career_foward_the_modern_way">Move your career foward the modern way</string>
    <string name="you_ll_only_be_shown_to_others_in_the_same_mode">"You\'ll only be shown to others in the same mode."</string>
    <string name="find_that_spark_in_an_empowered_community">Find that spark in an empowered community</string>
    <string name="bumble">bumble</string>
    <string name="let_s_make_this_easy">"Let's make this easy swipe left if you are a supporter of the RW"</string>
    <string name="pg_s_location">"Pg's location"</string>
    <string name="mumbai_india">"Mumbai Bollywood, India\n ~84 km away</string>
    <string name="block_report"><![CDATA[Block & Report]]></string>
    <string name="block_user">Block and Report</string>
    <string name="i_love_gk_more_than_anything_else">I love GK more than anything else</string>
    <string name="i_can_drive_you_crazy_but_i_won_t_drive_on_footpath">"I can drive you crazy but i won't drive on footpath"</string>
    <string name="delhi_india">Delhi, India</string>
    <string name="make_the_first_move">Make the first move</string>
    <string name="first_move_men">first move</string>

    <string name="Description">Welcome! We &amp;re excited to be part of your dating journey.</string>
    <string name="desc_1">Welcome! We &amp;re excited to be part of your dating journey.</string>
    <string name="desc2">Here we treat everyone with kindness and respect, no matter their race, religion, nationality, ethnicity, skin color, ability, size, sex, gender identity, sexual orientation.</string>
    <string name="desc3">In our mission to actively keep Bumble safe and inclusive, we ask you to join us by adhering to our <u>guidelines.</u></string>
    <string name="desc4">And remember: We\'ve always got your back!</string>
    <string name="desc5">With love, The Bumble Team</string>
    <string name="before_you_swipe">Before you swipe</string>
    <string name="i_agree">I Agree</string>
    <string name="dd_hint">DD</string>

    <string name="enable_location_services">Enable location services</string>
    <string name="firstmovemen">When you match with someone, both of you can make the</string>
    <string name="use_your_location">We use your location to show you potential</string>
    <string name="matches_in_your_area">matches in your area</string>
    <string name="enable_location">Enable Location</string>
    <string name="enablelocation">Enable location</string>
    <string name="not_now">Not now</string>
    <string name="who_are_you_interested_in">Who are you interested in?</string>
    <string name="you_can_change_this_later">You can change this later.</string>
    <string name="i_m_interested_in_men">I\'m interested in men</string>
    <string name="i_m_interested_in_women">I\'m interested in women</string>
    <string name="i_m_interested_in_everyone">I\'m interested in everyone</string>
    <string name="we_only_show_you_to_men_interested_in_women">We only show you to men interested in women</string>
    <string name="men_interested_in_women">We only show you to men interested in women</string>
    <string name="name">name?</string>
    <string name="add_your_first_name">Add your first name</string>
    <string name="woman2">Woman</string>
    <string name="man2">Man</string>
    <string name="non_binary2">Non-binary</string>
    <string name="more_gender_options2">More gender options</string>
    <string name="settings">Settings</string>
    <string name="choose_mode">Choose mode</string>
    <string name="date_mode">Date mode</string>
    <string name="hide">Hide your profile in Date and just use BFF or Bizz.If you do this,you\'ll lose your connections and chats in Date.</string>
    <string name="snooze">Snooze</string>
    <string name="temporaryhide">Temporarily hide your profile from all modes.If you do this,you won\'t lose any connections or chats.</string>
    <string name="notification_settings">Notification settings</string>
    <string name="login_methods">Login methods</string>
    <string name="tap_to_edit_profile">Tap to edit profile</string>
    <string name="get_the_bumble_boost">Get the Bumble Boost</string>
    <string name="see_who_liked_you_by_upgrading_to_bumble_boost">See who liked you by upgrading to Bumble Boost</string>
    <string name="spotlight">Spotlight</string>
    <string name="thak_chukka_hu_vro_hr_bar_2nd_aa_aa_ke">Thak chukka hu vro hr bar 2nd aa aa ke</string>
    <string name="jhakkas">Jhakkas!</string>
    <string name="beeline">Beeline</string>
    <string name="contact_faq"><![CDATA[Contact & FAQ]]></string>
    <string name="logout">Log out</string>
    <string name="delete">Delete</string>
    <string name="btndelete">Delete</string>
    <string name="match_queue">Match Queue</string>
    <string name="conversations">Conversations</string>
    <string name="recent">Recent</string>
    <string name="get_to_the_front_of_the_queue">Get to the front of the queue</string>
    <string name="be_seen_by_more_people_in_spotlight">Be seen by more people in spotlight</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="completeprofile">Make sure to complete your profile--the...</string>
    <string name="boom">BOOM!</string>
    <string name="buzzworthy">#buzzworthy</string>
    <string name="holdconvo">"You're in control of the conversation.Youhave 24 hours to make the first move."</string>
    <string name="introduce_yourself">Introduce yourself....</string>

    <string name="login_desc">Login in to your Facebook account to \n connect to Bumble</string>
    <string name="create_account">Create account</string>
    <string name="forgotten_password_help_center">Forgotten Password? Help Center</string>
    <string name="log_in">Log In</string>
    <string name="hint_email_phone__number">Mobile number or email address</string>
    <string name="facebook_password">Facebook password</string>
    <string name="facebook">facebook</string>
    <string name="men">Men</string>
    <string name="advanced_filters">Advanced Filters</string>
    <string name="up_to_30_kilometers_away">Up to 30 kilometers away</string>
    <string name="distance">Distance</string>
    <string name="age">Age</string>
    <string name="everyone">Everyone</string>
    <string name="women">Women</string>
    <string name="upgrade_to_bumble_boost_to_see_the_1_bee_who_s_already_liked_in_your_in_your_beeline">Upgrade to Bumble Boost to see the 1 bee who\'s already liked in your in your Beeline</string>
    <string name="we_never_sgare_this_with_anyone_and_it_won_t_be_on_your_profile">We never sgare this with anyone and it won\'t be on your profile</string>
    <string name="swipe_right_if_you_are_ismart_enough_to_get_my_joke">"Swipe right if you are ismart enough to get my jokes...\nJuuzz LETTING YOU KNOW \nYaa, I Mean!"</string>
</resources>