<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_bumble"
    tools:context=".firstMoveActivity">

    <ImageView
        android:id="@+id/mImgbumblechat"
        style="@style/ImageView_make_the_first_move"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mTvfirstmove"
        style="@style/TitleTextViewBackground"
        android:text="@string/women_make_the_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mImgbumblechat" />

    <TextView
        android:id="@+id/mTvmove"
        style="@style/TitleTextViewBackground2ndLine"
        android:text="@string/move"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTvfirstmove" />

    <TextView
        android:id="@+id/mTvmatch"
        style="@style/Title2ndLineTextViewBackground"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/matchwithsomeone"
        app:layout_constraintStart_toStartOf="@id/mTvmove"
        app:layout_constraintTop_toBottomOf="@id/mTvmove" />

    <TextView
        style="@style/Title2ndLineTextViewBackground"
        android:padding="@dimen/dp_6"
        android:text="@string/to_send_a_message"
        app:layout_constraintStart_toStartOf="@id/mTvmatch"
        app:layout_constraintTop_toBottomOf="@id/mTvmatch" />

    <Button
        style="@style/GotItButton"
        android:id="@+id/mBtngotit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>