<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bumble"
    tools:context=".SignInActivity">


    <LinearLayout
        android:id="@+id/end_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTerms_of_services"
            style="@style/TextViewSign_in_"
            android:layout_marginStart="100dp"
            android:text="@string/terms_of_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPrivacy_policy"
            style="@style/TextViewSign_in_"
            android:layout_marginEnd="@dimen/dp_100"
            android:text="@string/privacy_policy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTerms_of_services" />
    </LinearLayout>

    <TextView
        android:id="@+id/dont_post_to_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/don_t_worry_we_never_post_to_facebook"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/end_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mTvphonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/use_cell_phone_number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/dont_post_to_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mBtnContinueFromFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/rectangle_btn_bg"
        android:text="@string/continue_from_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@+id/mTvphonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>