<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/mTvsettings"
        style="@style/settingsheader"
        android:text="@string/settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mTvChooseMode"
        style="@style/SettingsTextviewWithBackground"
        android:text="@string/choose_mode"
        app:drawableRightCompat="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTvsettings" />

    <TextView
        android:id="@+id/mTvDatemode"
        style="@style/SettingsTextviewWithBackground"
        android:text="@string/date_mode"
        app:drawableRightCompat="@drawable/switchbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTvChooseMode" />

    <TextView
        android:id="@+id/mTvhideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_33"
        android:text="@string/hide"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@+id/mTvDatemode" />

    <TextView
        android:id="@+id/mTvsnooze"
        style="@style/SettingsTextviewWithBackground"
        android:text="@string/snooze"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTvhideText" />

    <TextView
        android:id="@+id/mTvTemporaryhideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_33"
        android:text="@string/temporaryhide"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@+id/mTvsnooze" />

    <TextView
        android:id="@+id/mTvnotificationsettings"
        style="@style/SettingsTextviewWithBackground"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/notification_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTvTemporaryhideText" />

    <TextView
        android:id="@+id/mTvLoginmenthods"
        style="@style/SettingsTextviewWithBackground"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/login_methods"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTvnotificationsettings" />

    <Button
        android:id="@+id/mBtnLogOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_7"
        android:background="@drawable/settings_rectangle_all"
        android:text="Log out"
        android:textAllCaps="false"
        android:textColor="@color/yellow_bumble"
        app:layout_constraintEnd_toStartOf="@+id/mBtnDelete"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTvLoginmenthods" />

    <Button
        android:id="@+id/mBtnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_7"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_25"
        android:background="@drawable/settings_rectangle_all"
        android:text="Delete"
        android:textAllCaps="false"
        android:textColor="#373737"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mBtnLogOut"
        app:layout_constraintTop_toBottomOf="@+id/mTvLoginmenthods" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_200"
        android:scaleType="fitXY"
        android:src="@drawable/grey_bumbleeeee"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mBtnDelete"
        />

    <ImageButton
        android:id="@+id/iBtnBackForSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/mTvsettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mTvsettings"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />


</androidx.constraintlayout.widget.ConstraintLayout>