<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_bumble"
    tools:context=".RecoveryEmailidActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:progress="99"
        android:progressTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        style="@style/TitleTextViewBackground"
        android:text="@string/what_s_your_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        style="@style/TitleTextViewBackground2ndLine"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        style="@style/Title2ndLineTextViewBackground"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/we_use_this_to_recover_your_account_if_you"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        style="@style/Title2ndLineTextViewBackground"
        android:text="@string/can_t_log_in"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_38"
        android:layout_marginTop="@dimen/dp_38"
        android:layout_marginEnd="@dimen/dp_38"
        android:elevation="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardElevation="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <EditText
            android:id="@+id/mEtRecoverEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/add_recovery_mail"
            android:inputType="textPersonName"
            android:padding="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/mTvSkip"
        style="@style/Title2ndLineTextViewBackground"
        android:layout_marginBottom="@dimen/dp_40"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardView5" />

    <ImageButton
        android:id="@+id/iBtnNextFromRecoveryMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/circle_phonenumber_bg"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_baseline_keyboard_white_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/circle_phonenumber_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>